<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/image_appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/vc_appbar_night" />

    <co.garmax.materialflashlight.ui.views.MaskedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_appbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:background="@drawable/bg_rounded"
                android:orientation="vertical"
                android:padding="@dimen/margin_large">

                <LinearLayout
                    android:id="@+id/layout_keep_screen_on"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/text_keep_screen_on"
                        android:textColor="@color/colorPrimaryText" />

                    <android.support.v7.widget.SwitchCompat
                        android:id="@+id/switch_keep_screen_on"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_auto_turn_on"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/text_auto_turn_on"
                        android:textColor="@color/colorPrimaryText" />

                    <android.support.v7.widget.SwitchCompat
                        android:id="@+id/switch_auto_turn_on"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:background="@drawable/bg_rounded"
                android:orientation="vertical"
                android:padding="@dimen/margin_large"
                android:textStyle="bold">

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/radio_camera_flashlight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_camera_flashlight" />

                    <RadioButton
                        android:id="@+id/radio_screen"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/text_screen"/>

                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:background="@drawable/bg_rounded"
                android:orientation="vertical"
                android:padding="@dimen/margin_large">

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/radio_torch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_torch" />

                    <RadioButton
                        android:id="@+id/radio_interval_strobe"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/text_interval_strobe" />

                    <RadioButton
                        android:id="@+id/radio_sound_strobe"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_sound_strobe" />

                    <RadioButton
                        android:id="@+id/radio_sos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_sos" />

                </RadioGroup>
            </LinearLayout>

            <TextView
                android:id="@+id/text_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_large" />

        </LinearLayout>

    </co.garmax.materialflashlight.ui.views.MaskedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_large"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:fabSize="normal"
        app:layout_anchor="@id/layout_content"
        app:layout_anchorGravity="bottom|end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_power_off" />

</android.support.constraint.ConstraintLayout>
