<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true">

            <ImageView
                android:id="@+id/image_appbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/vc_appbar_night"
                tools:ignore="ContentDescription" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <FrameLayout
        android:id="@+id/layout_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foreground="@drawable/header_shadow"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="?attr/dividerVertical"
                android:orientation="vertical"
                android:showDividers="middle"
                tools:ignore="UselessParent">

                <LinearLayout
                    android:id="@+id/layout_keep_screen_on"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="@dimen/text_margin">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/text_keep_screen_on"
                        app:srcCompat="@drawable/ic_keep_screen_on" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/text_margin"
                        android:layout_marginRight="@dimen/text_margin"
                        android:layout_weight="1"
                        android:text="@string/text_keep_screen_on"
                        android:textColor="@color/colorPrimaryText" />

                    <android.support.v7.widget.SwitchCompat
                        android:id="@+id/switch_keep_screen_on"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_auto_turn_on"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="@dimen/text_margin">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/text_auto_turn_on"
                        app:srcCompat="@drawable/ic_auto_turn_on" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/text_margin"
                        android:layout_marginRight="@dimen/text_margin"
                        android:layout_weight="1"
                        android:text="@string/text_auto_turn_on"
                        android:textColor="@color/colorPrimaryText" />

                    <android.support.v7.widget.SwitchCompat
                        android:id="@+id/switch_auto_turn_on"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/layout_strobe_enabled"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="@dimen/text_margin"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/text_modes"
                            app:srcCompat="@drawable/ic_strobe" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/text_margin"
                            android:layout_marginRight="@dimen/text_margin"
                            android:layout_weight="1"
                            android:text="@string/text_modes"
                            android:textColor="@color/colorPrimaryText" />

                    </LinearLayout>

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/text_margin"
                        android:layout_marginLeft="@dimen/text_margin"
                        android:layout_marginStart="@dimen/text_margin">

                        <RadioButton
                            android:id="@+id/radio_torch"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/text_margin"
                            android:layout_marginStart="@dimen/text_margin"
                            android:text="@string/text_torch" />

                        <RadioButton
                            android:id="@+id/radio_interval_strobe"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/text_margin"
                            android:layout_marginStart="@dimen/text_margin"
                            android:checked="true"
                            android:text="@string/text_interval_strobe" />

                        <RadioButton
                            android:id="@+id/radio_sound_strobe"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/text_margin"
                            android:layout_marginStart="@dimen/text_margin"
                            android:text="@string/text_sound_strobe" />
                    </RadioGroup>
                </LinearLayout>

                <TextView
                    android:id="@+id/text_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="@dimen/text_margin"
                    android:textColor="@color/colorSecondaryText" />

            </LinearLayout>

        </ScrollView>
    </FrameLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        app:fabSize="normal"
        app:layout_anchor="@id/layout_content"
        app:layout_anchorGravity="bottom|end"
        app:srcCompat="@drawable/ic_power_off" />

</android.support.design.widget.CoordinatorLayout>
